--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <!-- <form action="#" class="form-search d-flex align-items-stretch mb-3" data-aos="fade-up" data-aos-delay="200">
              <input type="text" class="form-control" placeholder="Enter Location"> 
           </form> -->
-          <a href="services.html" class="btn btn-primary d-flex align-items-stretch mb-3">Find Gym</a>
+          <a href="services.html" class="btn btn-primary mb-3 col-6" style="font-size: 23px;">Find Gym</a>
             <div class="row gy-4" data-aos="fade-up" data-aos-delay="400">
 
             <!-- <div class="col-lg-3 col-6">
@@ -189,7 +189,7 @@
         <div class="row gy-4">
           <div class="col-lg-6 position-relative align-self-start order-lg-last order-first">
             <img src="assets\img\gym1.jpg" class="img-fluid" alt="">
-            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn"></a>
+            <!-- <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn"></a> -->
           </div>
           <div class="col-lg-6 content order-last  order-lg-first">
             <h3>About Us</h3>
@@ -557,7 +557,7 @@
     </section><!-- End Testimonials Section -->
 
     <!-- ======= Frequently Asked Questions Section ======= -->
-    <section id="faq" class="faq">
+    <!-- <section id="faq" class="faq">
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
@@ -583,9 +583,10 @@
                     Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
                   </div>
                 </div>
-              </div><!-- # Faq item-->
+              </div>
+              <!-- # Faq item-->
 
-              <div class="accordion-item">
+              <!-- <div class="accordion-item">
                 <h3 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-2">
                     <i class="bi bi-question-circle question-icon"></i>
@@ -597,9 +598,10 @@
                     Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
                   </div>
                 </div>
-              </div><!-- # Faq item-->
+              </div> -->
+              <!-- # Faq item-->
 
-              <div class="accordion-item">
+              <!-- <div class="accordion-item">
                 <h3 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-3">
                     <i class="bi bi-question-circle question-icon"></i>
@@ -611,9 +613,10 @@
                     Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
                   </div>
                 </div>
-              </div><!-- # Faq item-->
+              </div> -->
+              <!-- # Faq item-->
 
-              <div class="accordion-item">
+              <!-- <div class="accordion-item">
                 <h3 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-4">
                     <i class="bi bi-question-circle question-icon"></i>
@@ -626,9 +629,10 @@
                     Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
                   </div>
                 </div>
-              </div><!-- # Faq item-->
+              </div> -->
+              <!-- # Faq item-->
 
-              <div class="accordion-item">
+              <!-- <div class="accordion-item">
                 <h3 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-5">
                     <i class="bi bi-question-circle question-icon"></i>
@@ -640,15 +644,17 @@
                     Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in
                   </div>
                 </div>
-              </div><!-- # Faq item-->
+              </div> -->
+              <!-- # Faq item-->
 
-            </div>
+            <!-- </div>
 
           </div>
         </div>
 
-      </div>
-    </section><!-- End Frequently Asked Questions Section -->
+      </div> -->
+    <!-- </section> -->
+    <!-- End Frequently Asked Questions Section -->
 
   </main><!-- End #main -->
 
@@ -659,9 +665,9 @@
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-info">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span>Logis</span>
+            <span>FITHUB</span>
           </a>
-          <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+          <p>Introducing a revolutionary platform that offers flexible gym memberships, allowing you to book and pay for any gym only on a <b>per-session basis</b>. Say goodbye to long-term commitments and only pay for the days you actually use the gym.</p>
           <div class="social-links d-flex mt-4">
             <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
             <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
@@ -670,7 +676,7 @@
           </div>
         </div>
 
-        <div class="col-lg-2 col-6 footer-links">
+        <!-- <div class="col-lg-2 col-6 footer-links">
           <h4>Useful Links</h4>
           <ul>
             <li><a href="#">Home</a></li>
@@ -679,9 +685,9 @@
             <li><a href="#">Terms of service</a></li>
             <li><a href="#">Privacy policy</a></li>
           </ul>
-        </div>
+        </div> -->
 
-        <div class="col-lg-2 col-6 footer-links">
+        <!-- <div class="col-lg-2 col-6 footer-links">
           <h4>Our Services</h4>
           <ul>
             <li><a href="#">Web Design</a></li>
@@ -690,16 +696,16 @@
             <li><a href="#">Marketing</a></li>
             <li><a href="#">Graphic Design</a></li>
           </ul>
-        </div>
+        </div> -->
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4>Contact Us</h4>
           <p>
-            A108 Adam Street <br>
-            New York, NY 535022<br>
-            United States <br><br>
-            <strong>Phone:</strong> +1 5589 55488 55<br>
-            <strong>Email:</strong> info@example.com<br>
+            SU Knowledge Hub<br>
+            Rd Number 3, Banjara Hills, Hyderabad, Telangana 500073 <br>
+            INDIA <br><br>
+            <strong>Phone:</strong> +91 9182409494<br>
+            <strong>Email:</strong> saadua23@gmail.com<br>
           </p>
 
         </div>
@@ -709,14 +715,14 @@
 
     <div class="container mt-4">
       <div class="copyright">
-        &copy; Copyright <strong><span>Logis</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>FITHUB</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/logis-bootstrap-logistics-website-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
       </div>
     </div>
 
